# YaMindMap

./: .gitignore  Cargo.toml  REQUIREMENTS.md  build-all.sh  build.rs  bundle-macos.sh
.github/workflows/: build.yml
crates/yamind-canvas/: Cargo.toml
crates/yamind-canvas/src/: boundary_renderer.rs  edge_renderer.rs  hit_test.rs  interaction.rs  lib.rs  node_renderer.rs  program.rs  selection_renderer.rs  text_measure.rs  viewport.rs
crates/yamind-commands/: Cargo.toml
crates/yamind-commands/src/: boundary_cmds.rs  command.rs  composite.rs  edge_cmds.rs  history.rs  lib.rs  node_cmds.rs  style_cmds.rs
crates/yamind-core/: Cargo.toml
crates/yamind-core/src/: boundary.rs  document.rs  edge.rs  geometry.rs  id.rs  lib.rs  node.rs  selection.rs  style.rs
crates/yamind-file/: Cargo.toml
crates/yamind-file/src/: export_pdf.rs  export_png.rs  export_svg.rs  format.rs  lib.rs  migrate.rs
crates/yamind-layout/: Cargo.toml
crates/yamind-layout/src/: balanced.rs  engine.rs  lib.rs  radial.rs  routing.rs  spacing.rs  tree.rs
docs/: index.html
macos/: native.h  native.m
src/: CLAUDE.md  PLAN.md  app.rs  context_menu.rs  electron-vite.config.ts  main.rs  menu.rs  message.rs  open_handler.rs  package.json  shortcuts.rs  sidebar.rs  theme.rs  toolbar.rs  tsconfig.node.json  tsconfig.web.json
src/resources/: icon.icns
src/src/main/: file-operations.ts  menu.ts  settings-manager.ts  window-manager.ts
src/src/preload/: index.ts
src/src/renderer/: App.tsx  index.html  styles.css
src/src/shared/: constants.ts  defaults.ts  demo-document.test.ts  fonts.ts  (+1 more)
yamindmap-electron/: CLAUDE.md  electron-builder.yml  package-lock.json  package.json  vitest.config.ts
(+89 files in other folders)
