[workspace]
members = [
    "crates/yamind-core",
    "crates/yamind-layout",
    "crates/yamind-commands",
    "crates/yamind-file",
    "crates/yamind-canvas",
    ".",
]
resolver = "2"

[workspace.dependencies]
yamind-core = { path = "crates/yamind-core" }
yamind-layout = { path = "crates/yamind-layout" }
yamind-commands = { path = "crates/yamind-commands" }
yamind-file = { path = "crates/yamind-file" }
yamind-canvas = { path = "crates/yamind-canvas" }

iced = { version = "0.13", features = ["canvas", "advanced", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rstar = "0.12"
tiny-skia = "0.11"
printpdf = "0.7"
svg = "0.18"
rfd = "0.15"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[package]
name = "yamindmap"
version = "0.1.0"
edition = "2021"

[dependencies]
yamind-core = { workspace = true }
yamind-layout = { workspace = true }
yamind-commands = { workspace = true }
yamind-canvas = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
muda = "0.17"
rfd = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
